business registration form frontend created

--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -122,14 +122,14 @@ body {
     line-height: 1.4;
 }
 .bg-nav {
-    background: #024e91;
+    background: #ffc107;
   }
   .card-title.h5 {
-    color: #024e91!important;
+    color: #6e0202 !important;
   }
 
   button.btn.learnmore {
-    background: #024e91;
+    background: #ffc107;
     padding: 10px 20px!important;
     border-radius: 5px!important;
 }
