--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -102,6 +102,11 @@ body {
 .event-card .badge {
     transition: transform 0.2s ease, background-color 0.2s ease;
 }
+.nearby-business, .upcoming-events {
+    width: 100%;
+    height: 220px!important;
+    object-fit: cover;
+}
 
 .event-card .badge:hover {
     background-color: transparent;
